add evaluate button in dashboard